KSPM: Recreate mapping on removal only if needed

Previously, the model would create a mapping for the wrong index while
processing removal.  Constrain the re-creation of the mapping by
determining at AboutToBe-time whether to re-create it.  This is
important because the mapping contains QPersistentModelIndexes to the
source model, and when post-processing the removal, that is already
invalidated.

BUG: 352369